@@ -2,6 +2,9 @@ Change_LOG / History
 
 V8.6 xx/xx/2013
 
+Impacts NZBs
+SABnzbd 0.7.17+ now uses 8 arguments, not 7. These scripts now support the extra argument.
+
 Impacts Torrents
 Moved delete to end of routine, only when succesful process occurs.
 Don't flatten hp category (in case multi cd album)
